--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
     "main": "dist/kai-elo-rating.cjs.js",
     "module": "dist/kai-elo-rating.esm.js",
     "browser": "dist/kai-elo-rating.umd.js",
-    "dependencies": {
-        
-    },
     "keywords": [
         "elo",
         "rating",
@@ -15,11 +12,10 @@
         "matchmaking"
     ],
     "devDependencies": {
-        "rollup": "^1.0.0",
-        "rollup-plugin-commonjs": "^9.2.0",
-        "rollup-plugin-node-resolve": "^4.0.0",
-        "rollup-plugin-typescript": "^1.0.0",
-        "typescript": "^3.2.2"
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-node-resolve": "^13.1.3",
+        "@rollup/plugin-typescript": "^8.3.0",
+        "rollup": "^2.67.3"
     },
     "scripts": {
         "build": "rollup -c",
