--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-node-resolve": "^13.1.3",
         "@rollup/plugin-typescript": "^8.3.0",
-        "rollup": "^2.67.3"
+        "@types/jest": "^27.4.0",
+        "jest": "^27.5.1",
+        "rollup": "^2.67.3",
+        "ts-jest": "^27.1.3"
     },
     "scripts": {
         "build": "rollup -c",
         "dev": "rollup -c -w",
-        "test": "ts-node test/test.ts",
-        "pretest": "npm run build"
+        "test": "jest"
     },
     "files": [
         "dist"
